<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/blackColor"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:civ_circle_background_color="@color/whiteColor"
        android:src="@drawable/user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blueColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NationalID"
            android:textStyle="bold"
            android:textColor="@color/greenColor"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:id="@+id/nationalID"
            android:textColor="@color/blueGrayColor"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blueColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VoterName"
            android:textColor="@color/greenColor"
            android:textStyle="bold"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/blueGrayColor"

            android:id="@+id/voterName"
            android:padding="10dp" />

    </LinearLayout>









    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blueColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Birthofdate"
            android:textStyle="bold"
            android:textColor="@color/greenColor"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:id="@+id/birthOfDate"
            android:textColor="@color/blueGrayColor"

            android:padding="10dp" />

    </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blueColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City"
            android:textColor="@color/greenColor"

            android:textStyle="bold"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/blueGrayColor"
            android:id="@+id/city"
            android:padding="10dp" />

    </LinearLayout>








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blueColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Year"
            android:textColor="@color/greenColor"
            android:textStyle="bold"
            android:padding="10dp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:id="@+id/year"
            android:textColor="@color/blueGrayColor"
            android:padding="10dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blueColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/signOut"
        android:padding="15dp"
        android:layout_gravity="center"
        android:background="@drawable/vote_text"
        android:textColor="@color/whiteColor"
        android:layout_margin="40dp"
        android:text="@string/SIGNOUT"/>
</LinearLayout>